# src/utils/schemas/thread-schema.ts
@@ -1,0 +1,9 @@
+import joi from 'joi';
+import { CreateThreadDTO } from '../../dtos/thread-dtos';
+
+const createThreadSchema = joi.object<CreateThreadDTO>({
+  content: joi.string().max(300),
+  images: joi.string(),
+});
+
+export { createThreadSchema };
